[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/objects/feets.gd" type="Script" id=1]
[ext_resource path="res://scenes/effects/landing_effect.tscn" type="PackedScene" id=2]

[node name="feets" type="Node2D" groups=[ "ignore_destruction" ]]

transform/pos = Vector2( 9.53674e-07, 0 )
transform/scale = Vector2( 0.9375, 1 )
script/script = ExtResource( 1 )

[node name="left_feet" type="RayCast2D" parent="."]

transform/pos = Vector2( -19, 0 )
enabled = true
cast_to = Vector2( 0, 35 )
layer_mask = 33
type_mask = 11
__meta__ = { "_edit_lock_":true }

[node name="right_feet" type="RayCast2D" parent="."]

transform/pos = Vector2( 19, 0 )
enabled = true
cast_to = Vector2( 0, 35 )
layer_mask = 33
type_mask = 11
__meta__ = { "_edit_lock_":true }

[node name="landing_effect" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 0, 32 )


